lox-tests/tests/if/class_in_then.stderr
ERROR: at 'class': Expected expression, got Class
 --> 2:11
  |
2 | if (true) class Foo {}
  |           ^---^
